@@ -22,7 +22,7 @@
 <!ENTITY substitutionList "Llista de substitucions">
 <!ENTITY substitutionList.p "FoxReplace guarda una llista de substitucions que podeu definir i modificar en qualsevol moment des de la finestra d'opcions de FoxReplace. Podeu aplicar la llista de substitucions quan vulgueu prement la tecla F2 o bé prement el botó de la barra d'eines o activant una opció del menú. Quan ho feu, les substitucions de la llista s'aplicaran en l'ordre en què apareixen. Podeu aplicar la llista de substitucions tantes vegades com vulgueu sobre la mateixa pàgina. Les substitucions es fan sobre el contingut actual de la pàgina, és a dir, que si apliqueu la llista de substitucions una segona vegada, serà sobre el resultat de la primera. En aquesta llista de substitució, no hi ha les substitucions directament sinó que hi ha grups de substitucions, on s'associa una llista d'adreces (URLs) amb una llista de substitucions que s'apliquen en pàgines l'adreça de les quals coincideixi amb algun dels URLs.">
 <!ENTITY substitutionGroup "Grup de substitucions">
-<!ENTITY substitutionGroup.p0 "Està format per una llista d'URLs i una llista de substitucions. Les substitucions s'apliquen en l'ordre en què apareixen, i n'hi ha d'haver una com a mínim. La llista d'URLs serveix per definir a quines pàgines s'apliquen les substitucions. Si la llista és buida, les substitucions s'apliquen a qualsevol pàgina. S'hi poden afegir URLs i llavors les substitucions s'apliquen només si l'adreça de la pàgina coincideix amb un dels URLs. Finalment també hi pot haver URLs d'exclusió que tenen l'efecte contrari, fan que no s'apliquin les substitucions si l'adreça de la pàgina coincideix amb una d'aquestes. Per tant, si la llista d'URLs no és buida, s'apliquen les substitucions si l'adreça de la pàgina no coincideix amb cap URL d'exclusió i coincideix amb un dels URLs normals. Es considera que un URL d'una pàgina coincideix un URL del grup si l'URL del grup és una part de l'URL de la pàgina.">
+<!ENTITY substitutionGroup.p0 "Està format per una llista d'URLs i una llista de substitucions. Les substitucions s'apliquen en l'ordre en què apareixen, i n'hi ha d'haver una com a mínim. La llista d'URLs serveix per definir a quines pàgines s'apliquen les substitucions. Si la llista és buida, les substitucions s'apliquen a qualsevol pàgina. S'hi poden afegir URLs i llavors les substitucions s'apliquen només si l'adreça de la pàgina coincideix amb un dels URLs. Finalment també hi pot haver URLs d'exclusió que tenen l'efecte contrari, fan que no s'apliquin les substitucions si l'adreça de la pàgina coincideix amb una d'aquestes. Per tant, s'apliquen les substitucions si l'adreça de la pàgina no coincideix amb cap URL d'exclusió i sí coincideix amb un dels URLs normals o no n'hi ha. Es considera que un URL d'una pàgina coincideix un URL del grup si l'URL del grup és una part de l'URL de la pàgina.">
 <!ENTITY substitutionGroup.p1 "Els URLs d'exclusió són els que comencen amb un guionet (&quot;-&quot;), i es mostren en vermell; la resta són URLs normals. Podeu fer servir els caràcters especials &quot;*&quot; perquè coincideixi amb 0 o més caràcters qualssevol i &quot;|&quot; perquè coincideixi amb l'inici o el final de l'URL. Si voleu definir un URL que comenci amb guionet (per exemple &quot;-abc&quot;) i no sigui d'exclusió podeu fer servir la forma equivalent &quot;|*-abc&quot;.">
 <!ENTITY replaceHtml "Substituir HTML">
 <!ENTITY replaceHtml.p "Normalment les substitucions s'apliquen només sobre el text, però també hi ha l'opció de fer-ho sobre el codi HTML de la pàgina. Això permet modificar el format o l'estructura de la pàgina. A la llista de substitucions es pot activar o desactivar aquesta opció per cada grup.">
